feat: videos in galery and image about me

--- a/output.css
+++ b/output.css
@@ -668,6 +668,10 @@ video {
   left: -4.5rem;
 }
 
+.-right-\[18rem\] {
+  right: -18rem;
+}
+
 .-right-\[4\.5rem\] {
   right: -4.5rem;
 }
@@ -710,50 +714,6 @@ video {
 
 .top-\[30rem\] {
   top: 30rem;
-}
-
-.right-\[-100\%\] {
-  right: -100%;
-}
-
-.right-\[100\%\] {
-  right: 100%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-11 {
-  left: 2.75rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.-right-10 {
-  right: -2.5rem;
-}
-
-.-right-20 {
-  right: -5rem;
-}
-
-.-right-40 {
-  right: -10rem;
-}
-
-.-right-\[20\] {
-  right: -20;
-}
-
-.-right-\[20rem\] {
-  right: -20rem;
-}
-
-.-right-\[18rem\] {
-  right: -18rem;
 }
 
 .isolate {
@@ -980,6 +940,22 @@ video {
   height: 100vh;
 }
 
+.h-\[fit\] {
+  height: fit;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[4500px\] {
+  height: 4500px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -1087,11 +1063,6 @@ video {
 
 .border-separate {
   border-collapse: separate;
-}
-
-.-translate-x-\[140\%\] {
-  --tw-translate-x: -140%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\!transform {
