feat: implementações de melhorias

--- a/output.css
+++ b/output.css
@@ -907,20 +907,28 @@ video {
   height: 16rem;
 }
 
-.h-\[14rem\] {
-  height: 14rem;
-}
-
 .h-\[200px\] {
   height: 200px;
+}
+
+.h-\[26rem\] {
+  height: 26rem;
 }
 
 .h-\[30\%\] {
   height: 30%;
 }
 
+.h-\[450px\] {
+  height: 450px;
+}
+
 .h-\[500px\] {
   height: 500px;
+}
+
+.h-\[70\%\] {
+  height: 70%;
 }
 
 .h-\[90\%\] {
@@ -938,22 +946,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[fit\] {
-  height: fit;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[4500px\] {
-  height: 4500px;
-}
-
-.h-\[450px\] {
-  height: 450px;
 }
 
 .w-1\/2 {
@@ -984,10 +976,6 @@ video {
   width: 15rem;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
 .w-\[22rem\] {
   width: 22rem;
 }
@@ -998,6 +986,10 @@ video {
 
 .w-\[80\%\] {
   width: 80%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[this-is\\\\\] {
@@ -1023,6 +1015,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .flex-shrink {
