--- a/output.css
+++ b/output.css
@@ -716,6 +716,38 @@ video {
   top: 30rem;
 }
 
+.top-\[8rem\] {
+  top: 8rem;
+}
+
+.top-\[rem\] {
+  top: rem;
+}
+
+.top-\[12rem\] {
+  top: 12rem;
+}
+
+.top-\[6rem\] {
+  top: 6rem;
+}
+
+.top-\[18rem\] {
+  top: 18rem;
+}
+
+.top-\[7rem\] {
+  top: 7rem;
+}
+
+.top-\[14rem\] {
+  top: 14rem;
+}
+
+.top-\[21rem\] {
+  top: 21rem;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -788,14 +820,6 @@ video {
   margin: 2rem;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
-.m-6 {
-  margin: 1.5rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -808,8 +832,16 @@ video {
   margin-top: -13px;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .box-border {
@@ -2247,12 +2279,21 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
 
 .pt-\[3\.4rem\] {
   padding-top: 3.4rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-left {
